feat: introduce centralized error handling with custom error pages (#13)
* feat: introduce centralized error handling with custom error pages

* test: improve test coverage